--- a/config.env
+++ b/config.env
@@ -1,38 +1,35 @@
-# Remove this line before deploying
-_____REMOVE_THIS_LINE_____=True
-
 # REQUIRED CONFIG
-BOT_TOKEN = ""
+BOT_TOKEN = "5559713954:AAGqNEc_2ii3IxqiV6eEa0QiMXeSY_Lr4Wc"
 GDRIVE_FOLDER_ID = ""
-OWNER_ID = 
+OWNER_ID = 1549436489
 DOWNLOAD_DIR = "/usr/src/app/downloads"
-DOWNLOAD_STATUS_UPDATE_INTERVAL = 20
-AUTO_DELETE_MESSAGE_DURATION = 60       
+DOWNLOAD_STATUS_UPDATE_INTERVAL = 10
+AUTO_DELETE_MESSAGE_DURATION = 15       
 AUTO_DELETE_UPLOAD_MESSAGE_DURATION = -1  #minimum recommended 120
-IS_TEAM_DRIVE = ""
-TELEGRAM_API = 
-TELEGRAM_HASH = ""
+IS_TEAM_DRIVE = "True"
+TELEGRAM_API = 14253629
+TELEGRAM_HASH = "b7cfc60eb4f77b05ab4a0b070eb80554"
 
 # OPTIONAL CONFIG
 DATABASE_URL = ""
-AUTHORIZED_CHATS = ""
-SUDO_USERS = ""
-IGNORE_PENDING_REQUESTS = ""
+AUTHORIZED_CHATS = "-1001836348058"
+SUDO_USERS = "5602739327"
+IGNORE_PENDING_REQUESTS = "True"
 USE_SERVICE_ACCOUNTS = ""
 INDEX_URL = ""
-STATUS_LIMIT = "2" #recommended value 2
-STOP_DUPLICATE = ""
-CMD_INDEX = ""
+STATUS_LIMIT = "3" #recommended value 2
+STOP_DUPLICATE = "True"
+CMD_INDEX = "1"
 UPTOBOX_TOKEN = ""
-TORRENT_TIMEOUT = ""
-EXTENSION_FILTER = ""
-INCOMPLETE_TASK_NOTIFIER = ""
+TORRENT_TIMEOUT = "1200"
+EXTENSION_FILTER = "True"
+INCOMPLETE_TASK_NOTIFIER = "True"
 
 #TURN ON/OFF FUCTIONS
-LEECH_ENABLED = ""              #Default is False (only use by owner/sudo) Make it True (for authorized chats)
-MIRROR_ENABLED = ""             #Default is False (only use by owner/sudo) Make it True (for authorized chats)
-WATCH_ENABLED = ""              #Default is False (only use by owner/sudo) Make it True (for authorized chats)
-CLONE_ENABLED = ""              #Default is False (only use by owner/sudo) Make it True (for authorized chats)
+LEECH_ENABLED = "True"              #Default is False (only use by owner/sudo) Make it True (for authorized chats)
+MIRROR_ENABLED = "True"             #Default is False (only use by owner/sudo) Make it True (for authorized chats)
+WATCH_ENABLED = "True"              #Default is False (only use by owner/sudo) Make it True (for authorized chats)
+CLONE_ENABLED = "True"              #Default is False (only use by owner/sudo) Make it True (for authorized chats)
 ANILIST_ENABLED = ""            #Default is False (only use by owner/sudo) Make it True (for authorized chats)
 WAYBACK_ENABLED = ""            #Default is False (only use by owner/sudo) Make it True (for authorized chats)
 MEDIAINFO_ENABLED = ""          #Default is False (only use by owner/sudo) Make it True (for authorized chats)
@@ -47,7 +44,7 @@ BOT_PM = ""
 FORCE_BOT_PM = ""   #For this the BOT_PM must be True 
 
 # Leech
-LEECH_LOG = 
+LEECH_LOG = -1001752517296
 LEECH_LOG_URL = ""
 LEECH_LOG_INDEXING = ""  #Default is False make it True if you want leech file indexing in leech log channel
 PAID_SERVICE = ""     # Default is False
@@ -61,7 +58,7 @@ LINK_LOGS =
 TG_SPLIT_SIZE = ""
 AS_DOCUMENT = ""
 EQUAL_SPLITS = ""
-TIMEZONE = "Asia/Kolkata"
+TIMEZONE = "Asia/Dhaka"
 
 #Telegraph UI
 TITLE_NAME = ""
@@ -75,8 +72,8 @@ CHANNEL_USERNAME = ""
 FSUB_CHANNEL_ID =
 
 # qBittorrent
-BASE_URL_OF_BOT = ""
-SERVER_PORT = ""
+BASE_URL_OF_BOT = "https://heroku.com/mirrorbot0070"
+SERVER_PORT = "80"
 WEB_PINCODE = ""
 QB_SEED = ""
 
@@ -135,7 +132,7 @@ FINISHED_PROGRESS_STR = '●' # '■'
 UN_FINISHED_PROGRESS_STR = '○' # '□'
 
 # THEME
-EMOJI_THEME = ""      #Default is False
+EMOJI_THEME = "True"      #Default is False
 SHOW_LIMITS_IN_STATS = ""   #Default is false 
 
 #VIEW STYLE
@@ -161,7 +158,7 @@ CAPTION_FONT = ""     # Default Caption of Leeched files, Available Options : b,
 
 # Buttons
 DISABLE_DRIVE_LINK = "" 
-VIEW_LINK = ""
+VIEW_LINK = "True"
 SOURCE_LINK = ""
 START_BTN1_NAME = ""
 START_BTN1_URL = ""
