--- a/config.env
+++ b/config.env
@@ -72,7 +72,7 @@ CHANNEL_USERNAME = ""
 FSUB_CHANNEL_ID =
 
 # qBittorrent
-BASE_URL_OF_BOT = "https://heroku.com/mirrorbot0070"
+BASE_URL_OF_BOT = "https://mirrorbot0070.herokuapp.com"
 SERVER_PORT = "80"
 WEB_PINCODE = ""
 QB_SEED = ""
